--- a/templates/partials/script/player_events.hbs
+++ b/templates/partials/script/player_events.hbs
@@ -333,7 +333,7 @@ socketEvents = function(eventId, eventData) {
 
         case 'game:last':
 
-            let markup = sessionStorage.getItem('markup');
+            {{!-- let markup = sessionStorage.getItem('markup'); --}}
 
             $('#gameContent').html(markup);
 
