--- a/templates/partials/script/global.hbs
+++ b/templates/partials/script/global.hbs
@@ -317,7 +317,7 @@
 	    $('#decider .create').hide();
       $('#decider').show();
       $('#decider .waiting, #decider-debugging').show();
-      $('#begin').addClass('waiting');
+      $('#begin').addClass('wait');
 
 	    $('#player-name').val('Player_' + Math.floor(Math.random() * (10 - 1 + 1)) + 1);
 
