Added custom path for web socket connection to allow for coexistence w/ other socket-based apps.

--- a/templates/partials/script/global.hbs
+++ b/templates/partials/script/global.hbs
@@ -331,7 +331,7 @@
     sessionStorage.setItem('uUID', playerUID);
 
     // Open socket connection
-    socket = io('//{{host}}', {'reconnection': true,'reconnectionDelay': 500,'maxReconnectionAttempts':Infinity});
+    socket = io('//{{host}}', {path: '/at-stake-socket', 'reconnection': true,'reconnectionDelay': 500,'maxReconnectionAttempts':Infinity});
     registerEvents();
 
 	}
