--- a/templates/views/index.hbs
+++ b/templates/views/index.hbs
@@ -14,7 +14,7 @@
       <div class="top-header col-sm-12 col-centered">
         <div class="landing-header"><span class="whats">what's</span></br><span class="at-sign">@</span><span class="header-stake">stake?</span></div>
       </div>
-      <div class="play-button"></div>
+      <div class="play-button">Play the game!</div>
     </div>
     <img class="landing-image" src="http://res.cloudinary.com/engagement-lab-home/image/upload/v1487958967/at-stake-site/stakewhitecropped.png">
   </div>
@@ -27,12 +27,12 @@
         <h4 class="tagline">{{{content.tagline.html}}}</h4>
         <div class="cta-para-one">{{{content.ctaParagraphOne.html}}}</div>
         <div class="cta-para-two">{{{content.ctaParagraphTwo.html}}}</div>
-          <ul class="cta-points">
-            <li><strong>{{{content.pointOneText.html}}}</strong></li>
-            <li><strong>{{{content.pointTwoText.html}}}</strong></li>
-            <li><strong>{{{content.pointThreeText.html}}}</strong></li>
-          </ul>
-      </div>
+        </div>
+        <ul class="cta-points">
+          <li><strong><div class="point-content">{{{content.pointOneText.html}}}</div></strong></li>
+          <li><strong><div class="point-content">{{{content.pointTwoText.html}}}</div></strong></li>
+          <li><strong><div class="point-content">{{{content.pointThreeText.html}}}</div></strong></li>
+        </ul>
     </div>
   </div>
 
